Fix run bugs.